<resources>
    <string name="app_name">FioPreto</string>


    <!--- Introduction -->
    <string name="intro_title">Boas-vindas ao Fio Preto!</string>
    <string name="intro_txt">Vamos começar essa jornada de autonomia estética juntos?</string>
    <string name="intro_button"> Vamos começar </string>
    <string name="intro_btn_next">Próximo</string>
    <string name="intro_btn_back">Anterior</string>

    <string name="intro2_txt">Inspire pessoas que buscam alcançar a sua autonomia estética.</string>
    <string name="intro_feed"><b>Feed</b></string>
    <string name="intro3_txt">Compartilhe e receba dicas para cuidados com seu cabelo.</string>
    <string name="intro_tips"><b>Dicas</b></string>
    <string name="intro4_txt">Faça agendamentos em salões focados em cabelos crespos e cacheados.</string>
    <string name="intro_schedule"><b>Agendamento</b></string>

    <!--- Register -->
    <string name="register_title">Crie uma conta</string>
    <string name="hint_name">Nome</string>
    <string name="hint_date">Data de nascimento</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Senha</string>
    <string name="register_button"> Cadastrar </string>

    <!--- Login -->
    <string name="login_title"> Faça login para começar </string>
    <string name="login_button"> Fazer login </string>
    <string name="login_register">É novo aqui? Cadastre-se para começar!</string>
    <string name="forget_password"><u>Esqueceu sua senha?</u></string>
    <string name="skip">Pular</string>
    <string name="login_reg_button"><u>Cadastre-se</u></string>

    <!--- Menu -->
    <string name="home">Home</string>
    <string name="tips">Dicas</string>
    <string name="feed">Feed</string>
    <string name="salon">Salões</string>
    <string name="profile">Perfil</string>

    <!--- Feed -->
    <string name="phrase_feed">Inspire <b>pessoas</b></string>
    <string name="button_pick">Escolher imagem</string>
    <string name="button_upload">Upload</string>
    <string name="button_save">Salvar</string>

    <!--- Salon -->
    <string name="phrase_salon">Cabelo bom é cabelo <b> bem cuidado</b></string>
    <string name="phrase_find_salon"><b>Vamos localizar salões na sua cidade...</b></string>
    <string name="find_salon">Selecione uma cidade</string>
    <string name="schedule">Agendar</string>

    <string name="search_Salon">Avançar</string>

    <!--- Tips -->
    <string name="phrase_tips">Compartilhe dicas</string>
    <string name="text_tips">Escreva aqui sua dica</string>

    <!--- Home -->
    <string name="phrase_home">Estamos trabalhando nisso...</string>

    <!--- Profile -->
    <string name="button_logout">Logout</string>

</resources>