<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        android:fontFamily="@font/montserrat"/>

    <item
        android:id="@+id/navigation_tips"
        android:enabled="true"
        android:fontFamily="@font/montserrat"
        android:icon="@drawable/ic_lightbulb"
        android:title="@string/tips" />

    <item
        android:id="@+id/navigation_feed"
        android:enabled="true"
        android:fontFamily="@font/montserrat"
        android:icon="@drawable/ic_feed"
        android:title="@string/feed" />

    <item
        android:id="@+id/navigation_salon"
        android:enabled="true"
        android:icon="@drawable/ic_cut"
        android:title="@string/salon"
        android:fontFamily="@font/montserrat"/>

    <item
        android:id="@+id/navigation_profile"
        android:enabled="true"
        android:icon="@drawable/ic_person"
        android:title="@string/profile"
        android:fontFamily="@font/montserrat"/>

</menu>