<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FindSalonFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/phrase_feed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="168dp"
            android:layout_marginEnd="24dp"
            android:autoSizeMinTextSize="8sp"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/montserrat"
            android:text="@string/phrase_find_salon"
            android:textColor="@color/charcoalBlack"
            android:textSize="24sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:hint="@string/find_salon"
                android:inputType="none"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/cities_salon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/search_salon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="256dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/background_button_grey"
            android:fontFamily="@font/montserrat"
            android:text="@string/search_Salon" />


    </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>