<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.Intro2Fragment">


    <ImageView
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="198dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="64dp"
        android:src="@drawable/selfie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:autoSizeMinTextSize="8sp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/montserrat"
        android:text="@string/intro_feed"
        android:textColor="@color/charcoalBlack"
        android:textSize="24sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img" />



    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:autoSizeMinTextSize="8sp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/montserrat"
        android:text="@string/intro2_txt"
        android:textColor="@color/charcoalBlack"
        android:textSize="16sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <ImageView
        android:id="@+id/page1"
        android:layout_width="44dp"
        android:layout_height="12dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="64dp"
        android:src="@drawable/page1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt">

    </ImageView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/intro2_button_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/background_button"
        android:text="@string/intro_btn_next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/intro2_button_back"
        app:layout_constraintTop_toBottomOf="@id/txt" />



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/intro2_button_back"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="112dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/background_stroke"
        android:text="@string/intro_btn_back"
        android:textAllCaps="false"
        android:textColor="@color/green"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/intro2_button_next"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt" />


</androidx.constraintlayout.widget.ConstraintLayout>