<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".ui.LoginFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:autoSizeMinTextSize="8sp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/login_title"
        android:textColor="@color/charcoalBlack"
        android:textSize="29sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_logo"
        android:layout_width="56dp"
        android:layout_height="60dp"
        android:layout_marginTop="72dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/logo"
        app:layout_constraintTop_toBottomOf="@id/login_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutEdtEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        app:layout_constraintTop_toBottomOf="@id/img_logo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/loginEdtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:fontFamily="@font/montserrat"
        android:textColorHint="@color/warmGrey"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:textColor="@color/warmGrey"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/img_logo"
        app:layout_constraintStart_toStartOf="parent"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutEdtPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/layoutEdtEmail"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/layoutEdtEmail"
        app:layout_constraintEnd_toEndOf="@id/layoutEdtEmail"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginEdtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:fontFamily="@font/montserrat"
            android:textColorHint="@color/warmGrey"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/warmGrey"
            android:backgroundTint="@color/white"
            app:layout_constraintTop_toBottomOf="@id/loginEdtEmail"
            app:layout_constraintStart_toStartOf="parent">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="72dp"
        android:background="@drawable/background_button"
        android:text="@string/login_button"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutEdtPassword"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="72dp"
        android:gravity="center"
        android:autoSizeMinTextSize="8sp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/montserrat"
        android:text="@string/login_signup"
        android:textColor="@color/charcoalBlack"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/forget_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="72dp"
        android:gravity="center"
        android:autoSizeMinTextSize="8sp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/montserrat"
        android:text="@string/forget_password"
        android:textColor="@color/charcoalBlack"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_signup"
        />





</androidx.constraintlayout.widget.ConstraintLayout>